# wai-middleware-auth

./: .dockerignore  .gitignore  CHANEGLOG.md  CHANGELOG.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  entrypoint.sh  stack-docker.yaml  stack-nightly.yaml  stack-old.yaml  stack.yaml  wai-middleware-auth.cabal
.azure/: azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml
.github/workflows/: tests.yml
app/: Main.hs  Redirect2tls.hs  SimpleOptions.hs
src/Network/Wai/: AppRoot.hs  ClientSession.hs  Github.hs  OAuth2.hs
src/Network/Wai/Auth/: AppRoot.hs  ClientSession.hs  Config.hs  Executable.hs  Internal.hs  Tools.hs
src/Network/Wai/Middleware/: Auth.hs  Redirect2tls.hs
src/Network/Wai/Middleware/Auth/: Github.hs  OAuth2.hs  OIDC.hs  OpenIDConnect.hs  Provider.hs
src/Network/Wai/Middleware/Auth/OAuth2/: Github.hs  Gitlab.hs  Google.hs
test/: Main.hs
test/Network/Wai/Auth/: Test.hs
test/Spec/Network/Wai/Auth/: Internal.hs
test/Spec/Network/Wai/Middleware/Auth/: OAuth2.hs  OIDC.hs  OpenIDConnect.hs
test/Spec/Network/Wai/Middleware/Auth/OAuth2/: Gitlab.hs
