cabal-version:       1.18
name:                wai-middleware-auth
version:             0.2.1.0
synopsis:            Authentication middleware that secures WAI application
description:         Please see the README and Haddocks at <https://www.stackage.org/package/wai-middleware-auth>
license:             MIT
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@fpcomplete.com
category:            Web
build-type:          Simple
extra-doc-files:     README.md CHANGELOG.md

library
  exposed-modules:     Network.Wai.Middleware.Auth
                       Network.Wai.Middleware.Auth.OAuth2
                       Network.Wai.Middleware.Auth.OAuth2.Github
                       Network.Wai.Middleware.Auth.OAuth2.Google
                       Network.Wai.Middleware.Auth.Provider
                       Network.Wai.Auth.Executable
                       Network.Wai.Auth.Internal
  other-modules:       Paths_wai_middleware_auth
                       Network.Wai.Auth.AppRoot
                       Network.Wai.Auth.Config
                       Network.Wai.Auth.ClientSession
                       Network.Wai.Auth.Tools
  build-depends:       aeson
                     , base                 >= 4.7 && < 5
                     , base64-bytestring
                     , binary
                     , blaze-builder
                     , blaze-html
                     , bytestring
                     , case-insensitive
                     , cereal
                     , clientsession
                     , cookie
                     , exceptions
                     , hoauth2              >= 1.0
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-reverse-proxy
                     , http-types
                     , regex-posix
                     , safe-exceptions
                     , shakespeare
                     , text
                     , time
                     , unix-compat
                     , unordered-containers
                     , uri-bytestring
                     , vault
                     , wai                  >= 3.0 && < 4
                     , wai-app-static
                     , wai-extra            >= 3.0.7
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall

executable wai-auth
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , cereal
                     , clientsession
                     , optparse-simple
                     , wai-middleware-auth
                     , warp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base
                     , binary
                     , bytestring
                     , hedgehog
                     , hoauth2
                     , text
                     , wai-middleware-auth
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/fpco/wai-middleware-auth
