cabal-version:       1.18
name:                wai-middleware-auth
version:             0.2.6.0
synopsis:            Authentication middleware that secures WAI application
description:         Please see the README and Haddocks at <https://www.stackage.org/package/wai-middleware-auth>
license:             MIT
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@fpcomplete.com
category:            Web
build-type:          Simple
extra-doc-files:     README.md CHANGELOG.md

library
  exposed-modules:     Network.Wai.Middleware.Auth
                       Network.Wai.Middleware.Auth.OAuth2
                       Network.Wai.Middleware.Auth.OAuth2.Gitlab
                       Network.Wai.Middleware.Auth.OAuth2.Github
                       Network.Wai.Middleware.Auth.OAuth2.Google
                       Network.Wai.Middleware.Auth.OIDC
                       Network.Wai.Middleware.Auth.Provider
                       Network.Wai.Auth.Executable
                       Network.Wai.Auth.Internal
  other-modules:       Paths_wai_middleware_auth
                       Network.Wai.Auth.AppRoot
                       Network.Wai.Auth.Config
                       Network.Wai.Auth.ClientSession
                       Network.Wai.Auth.Tools
  build-depends:       aeson
                     , base                 >= 4.12 && < 5
                     , base64-bytestring
                     , binary
                     , blaze-builder
                     , blaze-html
                     , bytestring
                     , case-insensitive
                     , cereal
                     , clientsession
                     , cookie               >= 0.4.2
                     , exceptions
                     , hoauth2              >= 1.11
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-reverse-proxy
                     , http-types
                     , jose                 >= 0.8.0
                     , microlens
                     , mtl
                     , regex-posix
                     , safe-exceptions
                     , shakespeare
                     , text
                     , time
                     , unix-compat
                     , unordered-containers
                     , uri-bytestring
                     , vault
                     , wai                  >= 3.0 && < 4
                     , wai-app-static
                     , wai-extra            >= 3.0.7
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall

executable wai-auth
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , cereal
                     , clientsession
                     , optparse-simple
                     , optparse-applicative
                     , wai-extra
                     , wai-middleware-auth
                     , warp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:       Network.Wai.Auth.Test
                     , Spec.Network.Wai.Auth.Internal
                     , Spec.Network.Wai.Middleware.Auth.OAuth2
                     , Spec.Network.Wai.Middleware.Auth.OIDC
  build-depends:       base
                     , aeson
                     , binary
                     , bytestring
                     , clientsession
                     , cookie
                     , hedgehog
                     , hoauth2
                     , http-types
                     , jose
                     , microlens
                     , mtl
                     , tasty
                     , tasty-hedgehog
                     , tasty-hunit
                     , text
                     , time
                     , uri-bytestring
                     , wai
                     , wai-extra
                     , wai-middleware-auth
                     , warp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/fpco/wai-middleware-auth
